Need to fix toggling room visibilities and friend functionality

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -149,3 +149,7 @@ form input[type=text] {
     display: inline;
     font-size: 16px;
 }
+
+.hidden {
+    display: none;
+}
